# algorithmic

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  ALPACA_BACKTEST_GUIDE.md  BACKTEST_ANALYSIS.md  BACKTRADER_CORE_MODULES_INTEGRATION.md  BACKTRADER_INTEGRATION_COMPLETE.md  BACKTRADER_INTEGRATION_SUMMARY.md  BALANCED_FVG_ZONE_GUIDE.md  BINANCE_DATA_IMPLEMENTATION_SUMMARY.md  CHANGE_LOG.md  CI_LOCAL_DISCREPANCY_ANALYSIS.md  CI_READINESS_REPORT.md  CLOCK_SKEW_IMPLEMENTATION.md  CODE_QUALITY_REPORT.md  CORRECTED_ORDER_FLOW_LOGIC.md  DEVELOPMENT_GUIDE.md  DOCUMENTATION_UPDATE_SUMMARY.md  ENHANCED_ANALYSIS_GUIDE.md  ENHANCED_FVG_DETECTION_SUMMARY.md  FRESH_BACKTEST_RESULTS.md  FVG_CONFIG_UPDATE.md  FVG_UNIFICATION_SUMMARY.md  LIVE_TRADING_SETUP.md  LOCAL_FORMAT_CI_FIX.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE_SUMMARY.md  PHASE8_IMPROVEMENTS.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  POLISH_COMPLETION_SUMMARY.md  POSITION_SNAPSHOTS_SUMMARY.md  PRE-COMMIT.md  PROJECT_CLEANUP_COMPLETE.md  PROJECT_CLEANUP_SUMMARY.md  PROJECT_MANIFEST.md  PROJECT_RELIABILITY_IMPROVEMENTS.md  PROJECT_RELIABILITY_SUMMARY.md  (+90 more)
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 8118be52a6dd_create_pivot_table.py  dafc562b5f25_create_fvg_table.py
api/: main.py
configs/: balanced_fvg_zone_config.yaml  base.yaml  binance.yaml  binance_tweaked.yaml  btcusdt_futures_optimization.yaml  btcusdt_optimization_base.yaml  fast_optimization_btc.yaml  optimized_binance.yaml  optimized_btc_20250801.yaml  phase3_production_validation.yaml  ultra_fast_btc.yaml  walk_forward_test.yaml
configs/sweeps/: quick_test.yaml  risk_optimization.yaml  strategy_optimization.yaml
core/: __init__.py  clock.py  entities.py  utils.py
core/backtesting/: __init__.py
core/data/: __init__.py  adapters.py  feeds.py  models.py
core/detectors/: __init__.py  _utils.py  events.py  fvg.py  manager.py  pivot.py
core/indicators/: __init__.py  atr.py  base.py  ema.py  fvg_detector.py  pack.py  regime.py  registry.py  snapshot.py  technical.py  volume.py  volume_sma.py
core/live/: __init__.py
core/risk/: __init__.py  config.py  live_reconciler.py  manager.py
core/signals/: __init__.py  signal_processor.py
core/strategies/: __init__.py  base_strategy.py  fvg_strategy.py
core/strategy/: __init__.py  aggregator.py  enhanced_killzone.py  factory.py  overlap.py  pool_manager.py  pool_models.py  pool_registry.py  ring_buffer.py  signal_candidate.py  signal_models.py  timeframe.py  ttl_wheel.py  zone_watcher.py
core/streaming/: __init__.py
core/trading/: __init__.py  models.py  protocols.py
docs/: BACKTEST_ANALYSIS.md  CI_BLOCKER_RESOLUTION.md  DATA_QUALITY_IMPROVEMENTS_SUMMARY.md  ENHANCED_ANALYSIS_GUIDE.md  ENHANCED_CLI_GUIDE.md  ENHANCED_KILLZONE_GUIDE.md  PHASE2_COMPLETE.md  PROJECT_CLEANUP_SUMMARY.md  PROJECT_STRUCTURE.md  TUI_GUIDE.md  TUI_TEST_RESULTS.md  back_test_visualization_guide.md  binance_data_guide.md  binance_quick_reference.md  detectors-config.md  phase4-summary.md  phase8_implementation_plan.md  python_binance_historical_data_guide.md
infra/brokers/: __init__.py  alpaca.py  base_live.py  binance_futures.py  broker.py  exceptions.py
infra/feeds/: base.py
notebooks/: PHASE3_PLAN.ipynb  interactive_visualization.ipynb
quant_algo/: __init__.py
quant_algo/visual/: __init__.py  data_exporter.py  enhanced_analysis.py  plot_builder.py
scripts/: README.md  __init__.py  algorithm_profiler.py  analyze_fvg_performance.py  analyze_fvg_timing.py  analyze_june_1_opportunity.py  analyze_strategy_timing.py  backtrader_comparison.py  backtrader_fvg_demo.py  backtrader_fvg_integration.py  backtrader_integration.py  backtrader_integration_research.py  chart_verification_examples.py  check_strategy_touches.py  clean_backtesting_summary.py  clean_time_window_backtesting.py  cleanup.sh  cleanup_unused_files.py  complete_statistical_backtest.py  comprehensive_entry_validation.py  comprehensive_performance_comparison.py  comprehensive_statistical_backtest.py  comprehensive_verdict.py  core_modules_backtrader_test.py  create_demo_data.py  database_optimizer.py  debug_ema_strategy.py  debug_fvg_detection.py  debug_mitigation.py  debug_signal_processing.py  debug_specific_dates.py  debug_swing_confirmed_detailed.py  debug_time_window_strategy.py  debug_timestamps.py  demo_ema_crossover_optimized.py  demo_ema_crossover_strategy.py  demo_enhanced_fvg.py  demo_refactored_system.py  demonstrate_core_modules_pattern.py  detailed_signal_analysis.py  (+56 more)
scripts/analysis/: README.md  analyze_backtest.py  detailed_may_20_analysis.py  entry_spacing_success_report.py
scripts/debug/: README.md
scripts/demos/: README.md
scripts/visualization/: README.md  __init__.py  enhanced_analysis.py
services/: backtester.py  data_loader.py  metrics.py  models.py  optimization_engine.py  parallel_optimizer.py  preprocessing_cache.py  replay.py  runner.py  sweep.py
src/: settings.py
test_final_integration/: sweep_results_20250727_012150.json
test_metrics_integration/: sweep_results_20250727_012332.json
test_real_strategy/: sweep_results_20250727_011839.json
test_real_strategy_fixed/: sweep_results_20250727_012056.json
test_sweep/: sweep_results_20250727_005926.json  sweep_results_20250727_010119.json
test_sweep_fixed/: sweep_results_20250727_010827.json
tests/: __init__.py  conftest.py  conftest_clean.py  conftest_old.py  fixtures.py  test_config_comparison.py  test_config_integration.py  test_data_quality_improvements.py  test_detectors.py  test_deterministic_poolid.py  test_implementations.py  test_indicators.py  test_may_20_scenario.py  test_mock_validation.py  test_overlap_detection.py  test_paper_broker.py  test_phase4_acceptance.py  test_phase6_acceptance.py  test_phase6_edge_cases.py  test_pool_registry.py  test_pool_registry_purge.py  test_refactor_smoke.py  test_refactor_summary.py  test_risk.py  test_signal_candidate.py  test_touch_reclaim_debug.py  test_ttl_wheel.py  test_utils.py  test_visualization.py  test_wheel_constants.py  test_zone_watcher_integration.py
tools/: README.md
(+91 files in other folders)
